# UI_lab

./: gitignore.txt
application/: application.pro
application/include/: IBrocker.h  ICompact.h  IProblem.h  ISolver.h
application/src/: main.cpp
compact/: compact.pro
compact/src/: compact_impl.cpp
compact_tests/: compact_tests.pro
compact_tests/include/: ICompact.h  test.h
compact_tests/src/: main.cpp
logger/: CMakeLists.txt  logger.pro
logger/include/: ILogger.h
logger/src/: logger_impl.cpp
problem/: problem.pro
problem/include/: IProblem.h
problem/src/: problem_impl.cpp
set/: CMakeLists.txt  set.pro
set/include/: ISet.h  IVector.h
set/src/: set_impl.cpp
set_tests/: set_tests.pro
set_tests/include/: ISet.h  test.h
set_tests/src/: main.cpp
solver/: solver.pro
solver/include/: IBrocker.h  IProblem.h  ISolver.h  IVector.h
solver/src/: solver_impl.cpp
vector/: CMakeLists.txt  vector.pro
vector/include/: ILogger.h  IVector.h
vector/src/: vector_impl.cpp
vector/tests/: CMakeLists.txt
vector/tests/include/: ILogger.h  IVector.h  test.h  vector_tests.h
vector/tests/src/: main.cpp
vector_tests/: vector_tests.pro
vector_tests/include/: ILogger.h  RC.h  library_global.h  test.h
vector_tests/src/: main.cpp
